tests/neg/i1688c.scala
package scala

object Null { // error
  def foo: Int = ???
}
